articles/homelab-k8s-series/03-yaml-manifests-thuan/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app-nodeport
  namespace: demo-app
spec:
  type: NodePort
  selector:
    app: web-app
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
